[gd_scene load_steps=14 format=2]

[ext_resource path="res://Sprites/stringstar fields/example.png" type="Texture" id=1]
[ext_resource path="res://Sprites/vp-pixel.simplified-demo.otf" type="DynamicFontData" id=2]
[ext_resource path="res://Scenes/Menu.gd" type="Script" id=3]
[ext_resource path="res://Sprites/03f82f330e6a424d5f47892540e37006.png" type="Texture" id=4]

[sub_resource type="DynamicFont" id=1]
size = 36
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.341176, 0.341176, 0.341176, 1 )

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0.341176, 0.341176, 0.341176, 1 )

[sub_resource type="DynamicFont" id=2]
size = 36
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.341176, 0.341176, 0.341176, 1 )

[sub_resource type="StyleBoxFlat" id=9]
bg_color = Color( 0.341176, 0.341176, 0.341176, 1 )

[sub_resource type="DynamicFont" id=3]
size = 36
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.341176, 0.341176, 0.341176, 1 )

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0.341176, 0.341176, 0.341176, 1 )

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )

[node name="FillerButton" type="Button" parent="."]
margin_left = 555.0
margin_top = 606.0
margin_right = 727.0
margin_bottom = 626.0
focus_neighbour_top = NodePath("../Buttons/StartButton")
focus_neighbour_bottom = NodePath("../Buttons/StartButton")

[node name="Background" type="Sprite" parent="."]
position = Vector2( 641.5, 362 )
scale = Vector2( 0.742477, 0.672222 )
texture = ExtResource( 1 )

[node name="Title" type="Sprite" parent="."]
modulate = Color( 0.564706, 0.564706, 0.564706, 1 )
position = Vector2( 652, 57 )
texture = ExtResource( 4 )

[node name="Buttons" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -85.0
margin_top = 24.0
margin_right = 87.0
margin_bottom = 231.0
rect_pivot_offset = Vector2( 0.778, 0 )
custom_constants/separation = 15

[node name="StartButton" type="Button" parent="Buttons"]
margin_right = 172.0
margin_bottom = 59.0
focus_neighbour_top = NodePath("../QuitButton")
custom_colors/font_color = Color( 0.666667, 0.666667, 0.666667, 1 )
custom_fonts/font = SubResource( 1 )
custom_styles/hover = SubResource( 4 )
custom_styles/focus = SubResource( 8 )
text = "Start"
expand_icon = true

[node name="OptionsButton" type="Button" parent="Buttons"]
margin_top = 74.0
margin_right = 172.0
margin_bottom = 133.0
custom_colors/font_color = Color( 0.666667, 0.666667, 0.666667, 1 )
custom_fonts/font = SubResource( 2 )
custom_styles/hover = SubResource( 5 )
custom_styles/focus = SubResource( 9 )
text = "Options"
expand_icon = true

[node name="QuitButton" type="Button" parent="Buttons"]
margin_top = 148.0
margin_right = 172.0
margin_bottom = 207.0
focus_neighbour_bottom = NodePath("../StartButton")
custom_colors/font_color = Color( 0.666667, 0.666667, 0.666667, 1 )
custom_fonts/font = SubResource( 3 )
custom_styles/hover = SubResource( 6 )
custom_styles/focus = SubResource( 7 )
text = "Quit"
expand_icon = true

[connection signal="mouse_entered" from="Buttons/StartButton" to="." method="_on_StartButton_mouse_entered"]
[connection signal="mouse_exited" from="Buttons/StartButton" to="." method="_on_StartButton_mouse_exited"]
[connection signal="pressed" from="Buttons/StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="mouse_entered" from="Buttons/OptionsButton" to="." method="_on_OptionsButton_mouse_entered"]
[connection signal="mouse_exited" from="Buttons/OptionsButton" to="." method="_on_OptionsButton_mouse_exited"]
[connection signal="pressed" from="Buttons/OptionsButton" to="." method="_on_OptionsButton_pressed"]
[connection signal="mouse_entered" from="Buttons/QuitButton" to="." method="_on_QuitButton_mouse_entered"]
[connection signal="mouse_exited" from="Buttons/QuitButton" to="." method="_on_QuitButton_mouse_exited"]
[connection signal="pressed" from="Buttons/QuitButton" to="." method="_on_QuitButton_pressed"]
